# mortgage-calculator

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: deploy.yml
app/: main.py
app/calculations/: amortization.py  mortgage.py
app/static/: script.js  style.css
app/templates/: index.html
static/: index.html  script.js  style.css
